adding edit for project

--- a/templates/project/detail.html
+++ b/templates/project/detail.html
@@ -24,7 +24,7 @@
 
     </div>
     <div class="card-footer" style="text-align: right;">
-        <a class="btn btn-success" href="#">Edit</a>
+        <a class="btn btn-success" href={{ object.get_edit_url }}>Edit</a>
         <a class="btn btn-success" href="#">Contribute</a>
     </div>
 </div>
