--- a/templates/base.html
+++ b/templates/base.html
@@ -121,7 +121,7 @@
 
                     <p>
                         <a href="{% url 'project:create_view' %}" class="btn btn-primary my-2">Create a Project</a>
-                        <a href="#" class="btn btn-secondary my-2">Support a Project</a>
+                        <a href="{% url 'project:list_view' %}" class="btn btn-success my-2">Support a Project</a>
                     </p>
                 </div>
             </div>
@@ -150,7 +150,15 @@
     </footer>
 
 
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 
 </body>
