--- a/templates/project/create.html
+++ b/templates/project/create.html
@@ -2,8 +2,9 @@
 
 
 {% block container %}
-<h1>Create Project:</h1>
-<div class="col-6 ">
+
+<div class="col-6 mx-auto ">
+    <h1>{{msg}}</h1>
     <form method="POST">
         {% csrf_token %}
         {{form.as_p}}
