--- a/templates/project/list.html
+++ b/templates/project/list.html
@@ -2,7 +2,18 @@
 
 
 {% block container %}
-<h1>Project List:</h1>
+<h1>Project List </h1>
+
+<div class="col-4">
+    <form>
+        <div class="input-group  mb-3">
+            <input type="text" name="q" class="form-control" placeholder="Search project"
+                aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Search</button>
+        </div>
+    </form>
+</div>
+
 <ul>
     {% for object in object_list %}
     <li>
@@ -14,4 +25,7 @@
 
     {% endfor %}
 </ul>
+
+
+
 {% endblock %}
