account login,signup ,logout, profile

--- a/templates/project/detail.html
+++ b/templates/project/detail.html
@@ -44,7 +44,8 @@
         <h4>Contributions</h3>
             <ul style="text-align: left;">
                 {% for contrib in contrib_list %}
-                <li>{{contrib.created_date}} - {{contrib.amount}} by {{contrib.contributor}} </li>
+                <li>{{contrib.created_date}} - {{contrib.amount}} by {{contrib.contributor}} - {{contrib.comments}}
+                </li>
                 {% endfor %}
             </ul>
             {% endif %}
@@ -57,8 +58,10 @@
 
 
                     <div class="input-group  ">
-                        <input type="text" name="amount" class="form-control" placeholder="Search project"
+                        <input type="text" name="amount" class="form-control mx-2" placeholder="amount"
                             aria-label="Recipient's username" aria-describedby="button-addon2">
+
+                        <input type="text" name="comments" class="form-control" placeholder="comments" />
                         <button class="btn btn-outline-primary" type="submit" id="button-addon2">Contribute</button>
                     </div>
 
