--- a/templates/base.html
+++ b/templates/base.html
@@ -82,12 +82,22 @@
                         <p class="text-muted">Funding powered by people</p>
                     </div>
                     <div class="col-sm-4 offset-md-1 py-4">
-                        <h4 class="text-white">Contact</h4>
+                        <h4 class="text-white">
+                            {% if user.is_authenticated %}
+                            {{user}}
+                            {% else %}
+                            <a href="{% url 'account:login_view' %}">Login</a>
+                            <a href="{% url 'account:signup_view' %}">Signup</a>
+
+                            {% endif %}
+                        </h4>
+                        {% if user.is_authenticated %}
                         <ul class="list-unstyled">
-                            <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                            <li><a href="#" class="text-white">Like on Facebook</a></li>
-                            <li><a href="#" class="text-white">Email me</a></li>
+                            <li><a href="{% url 'account:detail_view' %}" class="text-white">Profile</a></li>
+                            <li><a href="{% url 'account:logout_view' %}"> Logout</a></li>
+
                         </ul>
+                        {% endif %}
                     </div>
                 </div>
             </div>
