--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,11 @@
             white-space: nowrap;
             -webkit-overflow-scrolling: touch;
         }
+
+        .errorlist {
+            color: #555555;
+            background-color: bisque;
+        }
     </style>
 
 
