--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,22 +3,32 @@
 
 {% block container %}
 
-<div class="col-6 mx-auto ">
-    <div class="card ">
-        <div class="card-header bg-secondary text-white">
-            Login
-        </div>
-        <div class="card-body">
+<div class="col-4 mx-auto ">
+    <form method="POST">
+        <div class="card ">
+            <div class="card-header bg-secondary text-white">
+                Login
+            </div>
+
+            <div class="card-body">
 
 
-            <form method="POST">
+
                 {% csrf_token %}
                 {{form.as_p}}
-                <input class="btn btn-primary" value="Login" type="submit">
 
 
-            </form>
+
+
+
+            </div>
+            <div class="card-footer  " style="text-align:right;">
+
+                <input class="btn btn-primary " value="Login" type="submit">
+                <a class="btn btn-primary" href="{% url 'account:signup_view' %}">Signup</a>
+
+            </div>
         </div>
-    </div>
+    </form>
 </div>
 {% endblock %}
