--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
                         </h4>
                         {% if user.is_authenticated %}
                         <ul class="list-unstyled">
-                            <li><a href="{% url 'account:detail_view' %}" class="text-white">Profile</a></li>
+                            <li><a href="{% url 'account:create_view' %}" class="text-white">Profile</a></li>
                             <li><a href="{% url 'account:logout_view' %}"> Logout</a></li>
 
                         </ul>
