changes in account system

--- a/templates/password_reset/reset_complete.html
+++ b/templates/password_reset/reset_complete.html
@@ -2,5 +2,5 @@
 
 {% block container %}
     Password reset successfull.
-    <a href="{% url 'account:login_view' %}">Login</a>
+    <a href="{% url 'login_view' %}">Login</a>
 {% endblock %}
