--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -19,7 +19,7 @@
             <div class="card-footer  " style="text-align:right;">
 
                 <input class="btn btn-primary " value="Login" type="submit">
-                <a class="btn btn-primary" href="{% url 'account:signup_view' %}">Signup</a>
+                <a class="btn btn-primary" href="{% url 'signup_view' %}">Signup</a>
                 <div>
                     <a  href="{% url 'password_request' %}">Forget Password? </a>
                 </div>
