--- a/templates/base.html
+++ b/templates/base.html
@@ -91,15 +91,15 @@
                             {% if user.is_authenticated %}
                             {{user}}
                             {% else %}
-                            <a href="{% url 'account:login_view' %}">Login</a>
-                            <a href="{% url 'account:signup_view' %}">Signup</a>
+                            <a href="{% url 'login_view' %}">Login</a>
+                            <a href="{% url 'signup_view' %}">Signup</a>
 
                             {% endif %}
                         </h4>
                         {% if user.is_authenticated %}
                         <ul class="list-unstyled">
-                            <li><a href="{% url 'account:create_view' %}" class="text-white">Profile</a></li>
-                            <li><a href="{% url 'account:logout_view' %}"> Logout</a></li>
+                            <li><a href="{% url 'create_view' %}" class="text-white">Profile</a></li>
+                            <li><a href="{% url 'logout_view' %}"> Logout</a></li>
 
                         </ul>
                         {% endif %}
