--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
             background-color: bisque;
         }
     </style>
-
+{% load static %}
 
 </head>
 
@@ -127,6 +127,7 @@
     </header>
 
     <main>
+        <!-- <img src="{% static '1.jpg' %}" /> -->
 
         <section class="py-5 text-center container">
             <div class="row py-lg-1">
