--- a/templates/project/pertial/detail.html
+++ b/templates/project/pertial/detail.html
@@ -1,4 +1,8 @@
-{% for contrib in contrib_list %}
-    <li>{{contrib.created_date}} - {{contrib.amount}} by {{contrib.contributor}} - {{contrib.comments}}
-    </li>
-{% endfor %}
+<ul style="text-align: left;">
+                
+    {% for contrib in contrib_list %}
+        <li>{{contrib.created_date}} - {{contrib.amount}} by {{contrib.contributor}} - {{contrib.comments}}
+        </li>
+    {% endfor %}
+
+</ul>
