--- a/templates/project/detail.html
+++ b/templates/project/detail.html
@@ -3,80 +3,83 @@
 
 {% block container %}
 
-
-<div class="card border-success col-6 mx-auto ">
-    <img class="card-img-top" src="{{ object.project_image.url }}" />
-    <div class="card-header bg-success text-white border-success">
-        <h3>{{ object.name}}</h3>
-    </div>
-    <div class="card-body bg-light text-primary ">
-        <div>
-            
+<div class = "row no-gutters">
+    <div class="card border-success col-sm-12 mx-auto col-lg-6">
+        <img class="card-img-top" src="{{ object.project_image.url }}" />
+        <div class="card-header bg-success text-white border-success">
+            <h3>{{ object.name}}</h3>
         </div>
-        <h4 class="card-title">
-            {{object.description}}
+        
+            <div class="card-body bg-light text-primary ">
+                <div>
+                    
+                </div>
+                <h4 class="card-title">
+                    {{object.description}}
 
-        </h4>
-        <hr>
-        <p>
-            Pledged: ${{object.budget}},
-        </p>
-        <p>
-            Funded: ${{object.get_funded_amount}}
-        </p>
+                </h4>
+                <hr>
+                <p>
+                    Pledged: ${{object.budget}},
+                </p>
+                <p>
+                    Funded: ${{object.get_funded_amount}}
+                </p>
 
-        <p>
-            Achieved: {{object.get_funded_percentage}}%
-        </p>
-        <div>
-            {% if request.user == object.user %}
-
-
-            <a class="btn btn-primary" href="{{object.get_update_url}}">Edit</a>
-
-            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
-                Delete
-            </button>
+                <p>
+                    Achieved: {{object.get_funded_percentage}}%
+                </p>
+                <div>
+                    {% if request.user == object.user %}
 
 
-            {% endif %}
-        </div>
-    </div>
+                    <a class="btn btn-primary" href="{{object.get_update_url}}">Edit</a>
 
-    <div class="card-footer text-primary ">
-        {% if contrib_list.count %}
-        <h4>Contributions</h4>
-            <div id = "contributions_list21">
-                <ul style="text-align: left;">
-                
-                        {% for contrib in contrib_list %}
-                            <li>{{contrib.created_date}} - {{contrib.amount}} by {{contrib.contributor}} - {{contrib.comments}}
-                            </li>
-                        {% endfor %}
-                
-                </ul>
-             </div>
-            {% endif %}
-            <div style="text-align: right;">
-                <form method="POST" hx-post="{{object.get_contrib_url}}">
-                
-                    {% csrf_token %}
-                    <input type="hidden" name="project_id" value={{object.id}} />
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                        Delete
+                    </button>
 
-                    <div class="input-group  ">
-                        <input type="text" name="amount" class="form-control mx-2" placeholder="amount"
-                            aria-label="Recipient's username" aria-describedby="button-addon2">
 
-                        <input type="text" name="comments" class="form-control" placeholder="comments" />
-                        <button class="btn btn-outline-primary"  hx-target = "#contributions_list21" hx-swap="innerHTML" 
-                        hx-trigger = "/click" type="submit" id="button-addon2">Contribute</button>
-                    </div>
-
-                </form>
+                    {% endif %}
+                </div>
             </div>
+
+           
+    </div>
+    <div class = "card border-success col-sm-12 col-lg-6    ">
+        
+            <h4>Contributions</h4>
+            <form method="POST" hx-post="{{object.get_contrib_url}}">
+                <div id = "contributions_list21"> 
+                    <div style="text-align: right;">
+                        {% csrf_token %}
+                        <input type="hidden" name="project_id" value={{object.id}} />
+            
+                        <div class="input-group  ">
+                            <input type="text" name="amount" class="form-control mx-2" placeholder="amount"
+                                aria-label="Recipient's username" aria-describedby="button-addon2">
+            
+                            <input type="text" name="comments" class="form-control" placeholder="comments" />
+                            <button class="btn btn-outline-primary"  hx-target = "#contributions_list21" hx-swap="innerHTML" 
+                            hx-trigger = "/click" type="submit" id="button-addon2">Contribute</button>
+                        </div>
+            
+                    </div>
+                    {% if contrib_list.count %}
+                    <ul style="text-align: left;">
+                    
+                            {% for contrib in contrib_list %}
+                                <li>{{contrib.created_date}} - {{contrib.amount}} by {{contrib.contributor}} - {{contrib.comments}}
+                                </li>
+                            {% endfor %}
+                    
+                    </ul>
+                    {% endif %}
+                </div>
+            </form>
+        
     </div>
 </div>
-
 
 <!-- Button trigger modal -->
 
