--- a/templates/project/list.html
+++ b/templates/project/list.html
@@ -18,28 +18,30 @@
 <div id = "search_results">
     <ul>
         {% for object in object_list %}
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row no-gutters">
-            <div class="col-md-4">
-                <img src={{ object.project_image.url}} class="card-img" alt="...">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title">{{object.name}}</h5>
-                    
-                    <p class="card-text">{{ object.description|formatdesc }} 
-                        <a href="{{ object.get_detail_url }}" >Read More</a></p>
+        
+            <div class="card mb-3" style="max-width: 540px;" >
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src={{ object.project_image.url}} class="card-img" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">{{object.name}}</h5>
+                            
+                            <p class="card-text">{{ object.description|formatdesc }} 
+                                <!-- <a href="{{ object.get_detail_url }}" >Read More</a></p> -->
 
 
-                    <p>
-                        Pledged: ${{object.budget}}, Funded: {{object.get_funded_percentage}}%
-                    </p>
-
-                    <p class="card-text"><small class="text-muted">Last updated {{object.updated_date}}</small></p>
+                            <p class="text-success">
+                                Pledged: ${{object.budget}}, ({{object.get_funded_percentage}}% Funded)
+                            </p>
+                            <a href=" {{ object.get_detail_url }} " class="btn btn-primary stretched-link">Check details</a>
+                            <p class="card-text"><small class="text-muted">Last updated {{object.updated_date}}</small></p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            </div>
-        </div>
+        
         
         <!-- <li>
             <h3 class="card-header"><a href="{{object.get_detail_url }}">{{object.name}} </a></h3>
@@ -50,6 +52,7 @@
 
         {% endfor %}
     </ul>
+    
 </div>
 
 
